# cabal-rangefinder

./: Makefile  README.md  cabal-base.cabal  cabal-rangefinder.cabal
demo/: Main.hs
src/: CabalFile.hs  Main.hs  MaybeIO.hs  Parse.hs  ParseC.hs  ParseV.hs  Search.hs  VersionFile.hs
src/CabalFile/: Parser.hs  Printer.hs  Types.hs
src/CabalFile/Parser/: Test.hs  Types.hs
src/System/IO/: Strict.hs
src/VersionFile/: Parser.hs  Types.hs
src/VersionFile/Parser/: Test.hs  Types.hs
tests/capitalization/: Hello.hs  cabal.expected  cabal.in
tests/hello/: cabal.expected  cabal.in
