Name:                cabal-rangefinder
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            A tool to fill in the version ranges in a cabal file.

-- A longer description of the package.
-- Description:         

Homepage:            https://github.com/gelisam/cabal-rangefinder#readme
License:             PublicDomain
License-file:        LICENSE
Author:              Samuel Gélineau
Maintainer:          gelisam@gmail.com

Category:            Distribution

Build-type:          Simple
Cabal-version:       >=1.8

Extra-source-files:  README.md,
                     Makefile

executable cabal-rangefinder
  build-depends:  base >= 4 && < 5,
                  Cabal,
                  directory,
                  filepath,
                  mtl,
                  pretty,
                  process,
                  transformers
  main-is:        Main.hs
  hs-source-dirs: src
  ghc-options:    -Wall
